Fix: Corregir enlaces de navegación para GitHub Pages

--- a/Funciones/Index.html
+++ b/Funciones/Index.html
@@ -15,12 +15,12 @@
 
   <!-- Navegación -->
   <nav>
-    <a href="/index.html">Inicio</a>
+    <a href="../index.html">Inicio</a>
     <a href="Index.html">Funciones</a>
-    <a href="/Funcion_Flecha/Index.html">Función Flecha</a>
-    <a href="/Callback/">Callback</a>
-    <a href="/promesas/">Promesas</a>
-    <a href="/async/">Async</a>
+    <a href="../Funcion_Flecha/Index.html">Función Flecha</a>
+    <a href="../Callback/Index.html">Callback</a>
+    <a href="../promesas/index.html">Promesas</a>
+    <a href="../async/index.html">Async</a>
   </nav>
 
   <!-- Explicación teórica sobre funciones -->
