--- a/async/index.html
+++ b/async/index.html
@@ -15,11 +15,11 @@
 
   <!-- Navegación -->
   <nav>
-    <a href="/index.html">Inicio</a>
-    <a href="/Funciones/">Funciones</a>
-    <a href="/Funcion_Flecha/">Función Flecha</a>
-    <a href="/Callback/">Callback</a>
-    <a href="/promesas/">Promesas</a>
+    <a href="../index.html">Inicio</a>
+    <a href="../Funciones/Index.html">Funciones</a>
+    <a href="../Funcion_Flecha/Index.html">Función Flecha</a>
+    <a href="../Callback/Index.html">Callback</a>
+    <a href="../promesas/index.html">Promesas</a>
     <a href="index.html">Async</a>
   </nav>
 
