--- a/Callback/Index.html
+++ b/Callback/Index.html
@@ -15,12 +15,12 @@
 
   <!-- Navegación -->
   <nav>
-    <a href="/index.html">Inicio</a>
-    <a href="/Funciones/">Funciones</a>
-    <a href="/Funcion_Flecha/">Función Flecha</a>
-    <a href="/Callback/">Callback</a>
-    <a href="/promesas/">Promesas</a>
-    <a href="/async/">Async</a>
+    <a href="../index.html">Inicio</a>
+    <a href="../Funciones/Index.html">Funciones</a>
+    <a href="../Funcion_Flecha/Index.html">Función Flecha</a>
+    <a href="Index.html">Callback</a>
+    <a href="../promesas/index.html">Promesas</a>
+    <a href="../async/index.html">Async</a>
   </nav>
 
   <!-- Sección teórica: ¿Qué es un Callback? -->
