--- a/promesas/index.html
+++ b/promesas/index.html
@@ -11,12 +11,12 @@
     <h1>Repaso de JavaScript - Introducción a React</h1>
   </header>
   <nav>
-    <a href="/index.html">Inicio</a>
-    <a href="/Funciones/">Funciones</a>
-    <a href="/Funcion_Flecha/">Función Flecha</a>
-    <a href="/Callback/">Callback</a>
+    <a href="../index.html">Inicio</a>
+    <a href="../Funciones/Index.html">Funciones</a>
+    <a href="../Funcion_Flecha/Index.html">Función Flecha</a>
+    <a href="../Callback/Index.html">Callback</a>
     <a href="index.html">Promesas</a>
-    <a href="/async/">Async</a>
+    <a href="../async/index.html">Async</a>
   </nav>
   <section>
     <h1>¿Qué es una Promesa en JavaScript?</h1>
