Fix navigation links - standardize file names to lowercase

--- a/Funcion_Flecha/Index.html
+++ b/Funcion_Flecha/Index.html
@@ -16,9 +16,9 @@
   <!-- Navegación -->
   <nav>
     <a href="../index.html">Inicio</a>
-    <a href="../Funciones/Index.html">Funciones</a>
-    <a href="Index.html">Función Flecha</a>
-    <a href="../Callback/Index.html">Callback</a>
+    <a href="../Funciones/index.html">Funciones</a>
+    <a href="index.html">Función Flecha</a>
+    <a href="../Callback/index.html">Callback</a>
     <a href="../promesas/index.html">Promesas</a>
     <a href="../async/index.html">Async</a>
   </nav>
