--- a/promesas/index.html
+++ b/promesas/index.html
@@ -12,9 +12,9 @@
   </header>
   <nav>
     <a href="../index.html">Inicio</a>
-    <a href="../Funciones/Index.html">Funciones</a>
-    <a href="../Funcion_Flecha/Index.html">Función Flecha</a>
-    <a href="../Callback/Index.html">Callback</a>
+    <a href="../Funciones/index.html">Funciones</a>
+    <a href="../Funcion_Flecha/index.html">Función Flecha</a>
+    <a href="../Callback/index.html">Callback</a>
     <a href="index.html">Promesas</a>
     <a href="../async/index.html">Async</a>
   </nav>
