--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <!-- Navegación principal -->
   <nav>
     <a href="index.html">Inicio</a>
-    <a href="Funciones/index.html">Funciones</a>
-    <a href="Funcion_Flecha/index.html">Función Flecha</a>
-    <a href="Callback/index.html">Callback</a>
-    <a href="promesas/index.html">Promesas</a>
-    <a href="async/index.html">Async</a>
+    <a href="Funciones/Index.html" target="_blank">Funciones</a>
+    <a href="Funcion_Flecha/Index.html" target="_blank">Función Flecha</a>
+    <a href="Callback/Index.html" target="_blank">Callback</a>
+    <a href="promesas/index.html" target="_blank">Promesas</a>
+    <a href="async/index.html" target="_blank">Async</a>
   </nav>
 
   <!-- Sección de introducción -->
